--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
 regex==2024.9.11
-requests==2.32.3
+requests>=2.31.0
 rich==13.8.1
 rpds-py==0.20.0
 ruff==0.6.8
@@ -101,7 +101,7 @@ transformers==4.45.1
 typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.2
-urllib3==2.2.3
+urllib3>=2.0.7
 uvicorn==0.31.0
 uvloop==0.18.0
 websockets==12.0
