--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,6 @@ encodec==0.1.1
 fastapi==0.115.0
 ffmpy==0.4.0
 filelock==3.16.1
-fireworks-ai==0.15.6
 fonttools==4.54.1
 frozenlist==1.4.1
 fsspec==2024.9.0
@@ -36,7 +35,6 @@ huggingface-hub==0.25.1
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
-instructor==1.6.2
 Jinja2==3.1.4
 jiter==0.5.0
 jmespath==1.0.1
@@ -53,7 +51,6 @@ mpmath==1.3.0
 multidict==6.1.0
 networkx==3.3
 numpy==2.1.1
-openai==1.50.2
 orjson==3.10.7
 packaging==24.1
 pandas==2.2.3
@@ -67,7 +64,7 @@ Pygments==2.18.0
 pyparsing==3.1.4
 pypdf==4.1.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-dotenv>=1.0.0
 python-multipart==0.0.12
 pytz==2024.2
 PyYAML==6.0.2
@@ -108,3 +105,4 @@ websockets==12.0
 wsproto==1.2.0
 yarl==1.13.1
 zipp==3.20.2
+backoff>=2.2.1
